@@ -1,5 +1,12 @@
 2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
+	Beautify code.
+
+	* src/thbrk/brk-maximal.c (th_brkpos_hints): Adjust indents.
+	* src/thbrk/brk-maximal.c (brk_recover): Adjust brackets.
+
+2009-06-10  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
 	* src/thbrk/brk-maximal.c (th_brkpos_hints): Add check for cases like
 	'เฉพาะ'.
 
